tests/baselines/reference/directReferenceToUndefined.errors.txt
==== tests/cases/compiler/directReferenceToUndefined.ts (1 errors) ====
    var x: Undefined;
           ~~~~~~~~~
!!! error TS2095: Could not find symbol 'Undefined'.
    var y = undefined;